force-app/main/default/objects/ICPSArticle__c/ICPSArticle__c.object-meta.xml
<CustomObject>
    <description>This object stores the details of articles that are associated with an ICPS record</description>
    <label>ICPS Article</label>
    <nameField>
        <label>Article Reference</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ICPS Articles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>