force-app/main/default/objects/ICPSArticle__c/fields/ICPS__c.field-meta.xml
<CustomField>
    <fullName>ICPS__c</fullName>
    <description>This is the linking of the ICPS article to the ICPS record.</description>
    <inlineHelpText>This is the linking of the ICPS article to the ICPS record.</inlineHelpText>
    <label>ICPS</label>
    <referenceTo>ICPS__c</referenceTo>
    <relationshipLabel>ICPS Articles</relationshipLabel>
    <relationshipName>ICPS_Articles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>