force-app/main/default/objects/ICPSArticle__c/fields/PostageInsurance__c.field-meta.xml
<CustomField>
    <fullName>PostageInsurance__c</fullName>
    <description>This is the amount paid for postage / insurance as declared by the sender</description>
    <inlineHelpText>This is the amount paid for postage / insurance as declared by the sender</inlineHelpText>
    <label>Postage / Insurance</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>