force-app/main/default/objects/ICPSArticle__c/validationRules/CannotModifyArticleNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>CannotModifyArticleNumber</fullName>
    <active>true</active>
    <description>You are not permitted to change the article number</description>
    <errorConditionFormula>ISCHANGED( Name )</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>You are not permitted to change the article number</errorMessage>
</ValidationRule>