force-app/main/default/objects/ICPSArticle__c/validationRules/DeclaredValuePositive.validationRule-meta.xml
<ValidationRule>
    <fullName>DeclaredValuePositive</fullName>
    <active>true</active>
    <description>The Declared Value cannot be &lt; 0</description>
    <errorConditionFormula>DeclaredValue__c &lt; 0</errorConditionFormula>
    <errorDisplayField>DeclaredValue__c</errorDisplayField>
    <errorMessage>The Declared Value cannot be &lt; 0</errorMessage>
</ValidationRule>