force-app/main/default/objects/ICPSArticle__c/validationRules/PostageInsurancePositive.validationRule-meta.xml
<ValidationRule>
    <fullName>PostageInsurancePositive</fullName>
    <active>true</active>
    <description>The Postage/Insurance cannot be &lt; 0</description>
    <errorConditionFormula>PostageInsurance__c &lt; 0</errorConditionFormula>
    <errorDisplayField>PostageInsurance__c</errorDisplayField>
    <errorMessage>The Postage/Insurance cannot be &lt; 0</errorMessage>
</ValidationRule>