force-app/main/default/objects/ICPSArticle__c/validationRules/WeightPositive.validationRule-meta.xml
<ValidationRule>
    <fullName>WeightPositive</fullName>
    <active>true</active>
    <description>The Weight cannot be &lt; 0</description>
    <errorConditionFormula>Weight__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Weight__c</errorDisplayField>
    <errorMessage>The Weight cannot be &lt; 0</errorMessage>
</ValidationRule>